# happyrobot-inbound-carrier-sales

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
app/routers/: calls.py  carriers.py  loads.py  metrics.py
app/services/: fmcsa.py
docs/: ACME_LOGISTICS_BUILD.md  HAPPYROBOT_WORKFLOW_SETUP.md  LOOM_SCRIPT.md  SYSTEM_PROMPT.md  SYSTEM_PROMPT_PLAIN.txt  SYSTEM_PROMPT_SURGICAL.txt  email_to_carlos.md
scripts/: deploy.sh  run_local.sh  seed_loads.py
tests/: conftest.py  test_auth.py  test_calls_metrics.py  test_carriers.py  test_healthz.py  test_loads.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CallsTable.tsx  Charts.tsx  Tile.tsx
web/lib/: api.ts  types.ts
